004 e 003 - pequenas mudanças