@@ -2,13 +2,14 @@ package br.cefetmg.inf.sigap.dao;
 
 import br.cefetmg.inf.sigap.backend.InitServlet;
 
+import java.lang.reflect.InvocationTargetException;
 import java.sql.Connection;
 import java.sql.DriverManager;
 import java.sql.PreparedStatement;
 import java.sql.SQLException;
 
 public class GeneralDao {
-    private static Connection conectarDB(){
+    public static Connection conectarDB(){
         String driver = "org.postgresql.Driver";
         String protocol = "jdbc:postgresql://db:5432/sigap";
         String username = "sigap";
@@ -17,15 +18,10 @@ public class GeneralDao {
         Connection conn = null;
 
         try {
-            Class.forName(driver).newInstance();
+            Class.forName(driver).getDeclaredConstructor().newInstance();
         }
-        catch (ClassNotFoundException e){
-            e.printStackTrace();
-        }
-        catch (InstantiationException e){
-            e.printStackTrace();
-        }
-        catch (IllegalAccessException e){
+        catch (ClassNotFoundException | InstantiationException | IllegalAccessException | InvocationTargetException |
+               NoSuchMethodException e){
             e.printStackTrace();
         }
 
@@ -37,9 +33,10 @@ public class GeneralDao {
         }
         return conn;
     }
-    public static void dropTable(String sql, int id) throws Exception {
+    public static void dropTable(String table, int id) throws Exception {
         Connection conn = conectarDB();
         try {
+            String sql = "DROP TABLE " + table;
             PreparedStatement statement = conn.prepareStatement(sql);
             statement.executeUpdate();
             InitServlet initServlet = new InitServlet();
